--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "NEWAP Cebu WH Property Tool",
-    "version": "2.0",
-    "description": "A simple tool to partially automate search/exclusion of multiple property links.",
+    "name": "Warehouse Property Tool",
+    "version": "1.0",
+    "description": "A simple tool for searching/excluding/including properties in the ActivePipe Warehouse.",
     "manifest_version": 2,
     "background": {
         "scripts": [
@@ -22,7 +22,6 @@
             "128": "128.png"
         }
     },
-    "options_page": "options.html",
     "icons": {
         "16": "16.png",
         "32": "32.png",
@@ -41,8 +40,5 @@
                 "content.css"
             ]
         }
-    ],
-    "web_accessible_resources": [
-        "panel.html"
     ]
 }
